# --DEPRECATED--ionEngine

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
ion_core/: Cargo.toml
ion_core/src/engine/: app.rs  mod.rs  project_config.rs
ion_core/src/renderer/: mod.rs  render_config.rs  render_manager.rs
ion_core/src/resource/: resource_manager.rs
ion_core/src/util/: directory.rs  logger.rs  mod.rs
ion_math/: Cargo.toml
ion_math/src/: lib.rs
ion_math/src/angle/: deg.rs  mod.rs  rad.rs
ion_math/src/matrix/: mod.rs
ion_math/src/vector/: mod.rs  vec2.rs  vec3.rs
ion_math/tests/: mod.rs
ion_math/tests/vector/: mod.rs
ion_sandbox/: Cargo.toml
ion_sandbox/config/: README.txt  config.respkg
ion_sandbox/res/: README.txt
ion_sandbox/src/: main.rs
plugins/ion_renderer_sdl_gl/: Cargo.toml
plugins/ion_renderer_sdl_gl/src/: lib.rs  render_factory.rs
plugins/ion_renderer_sdl_gl/src/window/: mod.rs  window_backend_sdl2.rs
src/: application.rs  lib.rs
src/application/: app.rs  app_builder.rs  mod.rs
src/engine/: app.rs  app_info.rs  backend.rs  config.rs  mod.rs  plugin.rs
src/engine/backend/: backend_config.rs  backend_enum.rs  backend_info.rs  backend_manager.rs  backend_plugin.rs  mod.rs
src/renderer/: mod.rs  window_backend.rs
src/renderer/detail/: mod.rs  render_factory_default.rs  window_backend_default.rs
src/renderer/traits/: window_backend.rs
src/renderer/window/: mod.rs  (+3 more)
src/resource/: mod.rs  resource_config.rs  resource_directory.rs  resource_manager.rs
src/util/: logger.rs  mod.rs  version.rs
src/window/: mod.rs  window_config.rs  window_enum.rs  window_manager.rs
(+49 files in other folders)
