[package]
name        = "ion_core"
version     = "0.1.0"
authors     = ["Kyle Finlay <kyle.finlay01@gmail.com>"]
description = "The core of ionProject"
license     = "Apache-2.0"

[lib]
path       = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
glob       = "0.2.x"
libloading = "0.2.x"
log        = "0.3.x"
toml       = "0.1.x"
