[package]
name        = "ion_renderer_sdl_gl"
version     = "0.1.0"
authors     = ["Kyle Finlay <kyle.finlay01@gmail.com>"]
description = "OpenGL renderer for ionEngine"
license     = "Apache-2.0"

[lib]
path       = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
sdl2     = "*"
ion_core = {path = "../../ion_core"}
